--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.11</version>
+    </dependency>
   </dependencies>
 
   <build>
